# oculator

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb
Formula/: oculator_libs.rb
data/: centerbias.arrow
examples/: CMakeLists.txt
examples/qoculator/: CMakeLists.txt  DeviceReader.cpp  DeviceReader.hpp  ImageView.cpp  ImageView.hpp  main.cpp  mainwindow.ui
examples/saliency/: CMakeLists.txt  main.cpp
include/oculator/model/: saliency.hpp
include/oculator/model/MR-AIM/: RunMR_AIM.h
include/oculator/utils/: image_utils.h  onnx_utils.hpp  torch_utils.h
include/oculator/viz/: DeviceReader.hpp  ImageView.hpp
include/vin/: error_codes.hpp
models/: centerbias.npy  centerbias.pt  deepgaze.onnx  deepgaze.pth
run/: saliency.json  viewer.json
scripts/: download_model.sh
src/: main.cpp
src/oculator/gaze/: grad_heatmap.cpp  smoothing.cpp
src/oculator/model/: deepgaze_entry.cpp  openpose_entry.cpp  saliency.cpp
src/oculator/model/MR-AIM/: AIM.cpp  RunMR_AIM.cpp
src/oculator/sink_tools/: mcb_io.cpp
src/oculator/stm_etm/: etm.cpp  htm.cpp  whiteboard.cpp
src/oculator/utils/: image_utils.cpp  onnx_utils.cpp  torch_utils.cpp
src/utils/: image_utils.cpp  torch_utils.cpp
src/viz/: DeviceReader.cpp  ImageView.cpp  mainwindow.ui
